--- a/css/master.css
+++ b/css/master.css
@@ -19,6 +19,24 @@ html, body {
   position: relative;
 }
 
+/* TEXT
+--------------------------------------------------------------------------------------*/
+h1 {
+    font-size:38px;
+    line-height: 60px;
+    color: #006063;
+    margin: 35px 0 10px 27px
+}
+h2 {
+    font-size:24px;
+    line-height: 25px;
+    color:#018687;
+    margin-bottom: 20px;
+}
+p {
+    font-size:16px
+    line-height:1.3;
+}
 /* LINK
 --------------------------------------------------------------------------------------*/
 a {
@@ -36,7 +54,7 @@ a.btn, .info em{
     padding: 0 35px 0 15px;
     position: absolute;
     transition: all .2s ease;
-    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.84);
+    /*box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.84);*/
     display: block;
     background:#020C17;
     border-radius: 0 0 3px 3px;
@@ -74,7 +92,12 @@ a.link:after {
     transition: all .2s ease;
 }
 a.link:hover:after {
-  border-left-color:#00C4C4; 
+  border-left-color:#00C4C4;
+}
+a.link.big:after {
+    border-top-width: 15px;
+    border-bottom-width: 15px;
+    border-left-width: 15px;
 }
 a.btn:hover:after {
     border-top: 7px solid #00C4C4;
@@ -100,8 +123,6 @@ a.btn:hover:after {
   padding:15px;
   color:#BFBDBD;
   font-family: Calibri, Arial, sans-serif;
-  font-size: 1em;
-  line-height: 1em;
   z-index:10;
 }
 
@@ -158,7 +179,7 @@ nav ul li.info {
 	border: 1px solid #FFFFFF;
 	border-radius: 40px 40px 40px 40px;
 	float: right;
-	font-size: 1em;
+
 	height: 20px;
 	line-height: 22px;
 	margin-right: 30px;
@@ -182,7 +203,7 @@ nav ul li a {
     line-height: 38px;
     padding:1px 5px;
     border:1px solid #BFBDBD;
-	
+
 }
 nav ul li a.active {
     border:1px solid #00C4C4;
@@ -216,19 +237,16 @@ p.error {
 }
 .filter-error p.error {
     top: 5px;
-    
+
 }
 
 
 /* INFO BUBBLE
---------------------------------------------------------------------------------------*/ 
+--------------------------------------------------------------------------------------*/
 .bubble-content {
     color:#BFBDBD;
     padding-bottom: 10px;
-}
-.bubble-content h2 {
-    color:#018687;
-    font-size: 1.25em;
+    position:relative;
 }
 .bubble-content ul {
     margin:5px 0;
@@ -241,22 +259,21 @@ p.error {
     list-style: none;
     margin-left: 0px;
 }
-.bubble-content p {
-    margin-bottom:10px;
-}
 .bubble-content a {
-  
+    bottom: 10px;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
 }
-
 /* GALLERIE
 --------------------------------------------------------------------------------------*/
 #image-wrapper {
     width:100%;
-    height:0;
+    height:50%;
     background: #00353d;
-    border-top: 1px solid #020C17;
+    border-top: 10px solid #020C17;
     transition: height .4s ease;
-    box-shadow: 0 0 15px 3px rgba(2, 12, 23, 0.7) inset;
+    /*box-shadow: 0 0 15px 3px rgba(2, 12, 23, 0.7) inset;*/
     background: -moz-linear-gradient(top,  #00353d 0%, #020c17 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00353d), color-stop(100%,#020c17));
     background: -webkit-linear-gradient(top,  #00353d 0%,#020c17 100%);
@@ -284,28 +301,21 @@ p.error {
 #image-wrapper a.btn:hover:after {
     border-top: 7px solid #00C4C4;
 }
-
-#image-wrapper > h2 {
-  color: #006063;
-  font-size: 1.5em;
-  margin: 27px 0 0 27px;
-}
 #image-wrapper ul {
-    width:100%;
-    margin:0 15px;
-    padding:10px 0;
-    overflow-y:scroll;
-    height: 100%;
+    height: 150px;
+
+
+    padding: 10px 0;
+    width: 1000%;
 }
 #image-wrapper li {
-    width:250px;
-    height:150px;
-    overflow: hidden;
-    border:2px solid #00353D;
+    border: 2px solid #00353D;
     border-radius: 5px;
-    float:left;
-    margin:20px 10px;
-    /*transition: border .1s ease-in;*/
+    float: left;
+    height: 150px;
+    margin: 0;
+    overflow: hidden;
+    width: 140px;
 }
 #image-wrapper li:last-child {
     margin-bottom:120px;
@@ -343,7 +353,7 @@ p.error {
 .img-wrapper {
     width:102%;
     height:100%;
-    overflow-y: scroll; 
+    overflow-y: scroll;
 }
 .img-wrapper img {
     width:100%;
@@ -370,4 +380,10 @@ p.error {
 --------------------------------------------------------------------------------------*/
 img#marker-image, img#marker-shadow {
     display:none;
+}
+.scroll-container {
+    display: block;
+    overflow-x: scroll;
+    overflow-y: hidden;
+
 }
