--- a/css/master.css
+++ b/css/master.css
@@ -72,6 +72,14 @@ a.btn:after{
 	border-top: 7px solid #FFF;
     transition: all .2s ease;
 }
+a.btn.right:after {
+    border-bottom: 7px solid rgba(0, 0, 0, 0);
+    border-left: 7px solid #FFFFFF;
+    border-top: 7px solid rgba(0, 0, 0, 0);
+    right: 5px;
+    top: 10px;
+    transition:all 0.3s ease;
+}
 a.btn:hover, a.link:hover {
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.84);
 }
@@ -100,13 +108,20 @@ a.link.big:after {
     border-left-width: 15px;
 }
 a.btn:hover:after {
-    border-top: 7px solid #00C4C4;
+    /*border-top: 7px solid #00C4C4;*/
 }
 .active a.btn:after {
     border-left: 7px solid transparent;
 	border-right: 7px solid transparent;
 	border-bottom: 7px solid #00C4C4;
     border-top: 0px;
+}
+.active a.btn.right:after {
+    border-left: 0px;
+    border-right: 7px solid #00C4C4;
+    border-bottom: 7px solid transparent;
+    border-top: 7px solid transparent;
+    right:15px;
 }
 .info {
   font-family:times;
@@ -148,17 +163,27 @@ div#map.small {
 /* MENUE
 --------------------------------------------------------------------------------------*/
 nav {
-    width: 100%;
+    background: #020c17;
+    background: -moz-linear-gradient(left,  #020c17 0%, #00353d 100%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#020c17), color-stop(100%,#00353d));
+    background: -webkit-linear-gradient(left,  #020c17 0%,#00353d 100%);
+    background: -o-linear-gradient(left,  #020c17 0%,#00353d 100%);
+    background: -ms-linear-gradient(left,  #020c17 0%,#00353d 100%);
+    background: linear-gradient(to right,  #020c17 0%,#00353d 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020c17', endColorstr='#00353d',GradientType=1 );
+
+
+    color: #BFBDBD;
     display: block;
-    height: 0px;
-    background:#020C17;
-    float:left;
-    transition: height .2s ease;
-    position: relative;
-    color:#BFBDBD;
+    height: 100%;
+    left: -30%;
+    position: absolute;
+    transition: left 0.2s ease 0s;
+    width: 30%;
+    border-right:10px solid #000;
 }
 nav.active {
-    height:auto;
+    left:0%;
     z-index: 1;
 }
 nav ul {
@@ -211,8 +236,9 @@ nav ul li a.active {
 	color:#00C4C4
 }
 nav a.btn {
-    bottom: -30px;
-    left: 45%;
+    border-radius: 0 3px 3px 0;
+    left: 100%;
+    top:20px;
     z-index: 1;
 }
 nav.active a.btn {
