--- a/css/master.css
+++ b/css/master.css
@@ -33,6 +33,12 @@ h2 {
     color:#018687;
     margin-bottom: 20px;
 }
+h3 {
+    font-size:20px;
+    line-height: 22px;
+    color:#018687;
+    margin:20px 0;
+}
 p {
     font-size:16px
     line-height:1.3;
@@ -181,16 +187,23 @@ nav {
     transition: left 0.2s ease 0s;
     width: 30%;
     border-right:10px solid #000;
+    padding: 20px;
+
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    -ms-box-sizing:border-box;
+    -o-box-sizing:border-box;
+    box-sizing:border-box;
 }
 nav.active {
     left:0%;
     z-index: 1;
 }
 nav ul {
-    margin-left:30px;
+
 }
 nav ul li {
-    float: left;
+
     line-height: 39px;
     list-style: none outside none;
     margin: 0 4px;
@@ -199,30 +212,6 @@ nav ul li {
 }
 nav.active ul li {
     opacity: 1;
-}
-nav ul li.info {
-	border: 1px solid #FFFFFF;
-	border-radius: 40px 40px 40px 40px;
-	float: right;
-
-	height: 20px;
-	line-height: 22px;
-	margin-right: 30px;
-	margin-top: 8px;
-	text-align: center;
-	width: 20px;
-	position:relative;
-}
-nav ul li.info em {
-  visibility: hidden;
-  opacity: 0;
-  position:absolute;
-  min-width:150px;
-  right:0px;
-}
-nav ul li.info:hover em {
-  visibility: visible;
-  opacity: 1;
 }
 nav ul li a {
     line-height: 38px;
