--- a/css/master.css
+++ b/css/master.css
@@ -191,7 +191,7 @@ nav {
     transition: left 0.2s ease 0s;
     width: 30%;
     border-right:10px solid #000;
-    padding: 20px;
+    padding: 25px;
 
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
@@ -207,26 +207,41 @@ nav ul {
 
 }
 nav ul li {
-
-    line-height: 39px;
     list-style: none outside none;
-    margin: 0 4px;
-    opacity: 0;
-    transition: opacity .2s ease .2s;
-}
-nav.active ul li {
     opacity: 1;
 }
+nav.active ul li {
+}
 nav ul li a {
-    line-height: 38px;
-    padding:1px 5px;
-    border:1px solid #BFBDBD;
-
+    display:block;
+    line-height: 35px;
+    position: relative;
+    border-bottom: 2px solid #00353D;
 }
 nav ul li a.active {
-    border:1px solid #00C4C4;
-    box-shadow: 0 0 4px 0px;
+    border-bottom:2px solid #00C4C4;
+
 	color:#00C4C4
+}
+nav ul li a:after, nav ul li a:before {
+    background: none repeat scroll 0 0 #FFFFFF;
+    content: "";
+    display: block;
+    height: 2px;
+    opacity: 1;
+    position: absolute;
+    right: 5px;
+    top: 18px;
+    width: 12px;
+}
+nav ul li a:before {
+    height: 12px;
+    right: 10px;
+    top: 13px;
+    width: 2px;
+}
+nav ul li a.active:before {
+    opacity: 0;
 }
 nav a.btn {
     border-radius: 0 3px 3px 0;
