--- a/css/master.css
+++ b/css/master.css
@@ -166,8 +166,8 @@ div#map.small {
     border-bottom: 2px solid #020C17;
 }
 div#map.activeMenu {
-    width:70%;
-    left:30%;
+    width:75%;
+    left:25%;
 }
 
 /* MENUE
@@ -186,10 +186,10 @@ nav {
     color: #BFBDBD;
     display: block;
     height: 100%;
-    left: -30%;
+    left: -25%;
     position: absolute;
     transition: left 0.2s ease 0s;
-    width: 30%;
+    width: 25%;
     border-right:10px solid #000;
     padding: 25px;
 
@@ -220,7 +220,6 @@ nav ul li a {
 }
 nav ul li a.active {
     border-bottom:2px solid #00C4C4;
-
 	color:#00C4C4
 }
 nav ul li a:after, nav ul li a:before {
@@ -357,7 +356,8 @@ p.error {
     display: block;
 }
 #image-wrapper li a img {
-    width:100%;
+    width:180%;
+    margin-left: -80%;
 }
 #image-wrapper li:hover {
     border-color: #018687;
