--- a/css/master.css
+++ b/css/master.css
@@ -420,3 +420,26 @@ img#marker-image, img#marker-shadow {
     overflow-y: hidden;
 
 }
+
+/* MEDIA QUERIES
+--------------------------------------------------------------------------------------*/
+@media screen and (max-width: 600px) {
+  nav {
+    width:50%;
+    left:-50%;
+  }
+  #map.activeMenu {
+    left:50%;
+    width:50%;
+  }
+
+  #image-wrapper.active {
+    height:70%;
+  }
+  div#map.small {
+    height:30%;
+  }
+
+}
+
+
