--- a/css/master.css
+++ b/css/master.css
@@ -187,11 +187,12 @@ nav {
     display: block;
     height: 100%;
     left: -25%;
-    position: absolute;
+    position: fixed;
     transition: left 0.2s ease 0s;
     width: 25%;
     border-right:10px solid #000;
     padding: 25px;
+
 
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
@@ -204,7 +205,7 @@ nav.active {
     z-index: 1;
 }
 nav ul {
-
+    margin-bottom: 20px;
 }
 nav ul li {
     list-style: none outside none;
@@ -416,9 +417,9 @@ img#marker-image, img#marker-shadow {
 }
 .scroll-container {
     display: block;
-    overflow-x: scroll;
-    overflow-y: hidden;
-
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height:100%;
 }
 
 /* MEDIA QUERIES
@@ -427,11 +428,6 @@ img#marker-image, img#marker-shadow {
   nav {
     width:50%;
     left:-50%;
-  }
-  nav .scroll-container {
-    overflow-x:hidden;
-    overflow-y:scroll;
-    max-height: 80%;
   }
   #map.activeMenu {
     left:50%;
